--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ionic/storage": "2.1.3",
     "cordova-android": "7.0.0",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-ionic": "^5.0.5",
     "cordova-plugin-ionic-keyboard": "^2.1.2",
     "cordova-plugin-ionic-webview": "^2.0.2",
     "cordova-plugin-splashscreen": "^5.0.2",
