--- a/package.json
+++ b/package.json
@@ -11,38 +11,56 @@
     "lint": "ionic-app-scripts lint"
   },
   "dependencies": {
-    "@angular/animations": "5.2.11",
-    "@angular/common": "5.2.11",
-    "@angular/compiler": "5.2.11",
-    "@angular/compiler-cli": "5.2.11",
-    "@angular/core": "5.2.11",
-    "@angular/forms": "5.2.11",
-    "@angular/http": "5.2.11",
-    "@angular/platform-browser": "5.2.11",
-    "@angular/platform-browser-dynamic": "5.2.11",
-    "@ionic-native/core": "~4.11.0",
+    "@angular/animations": "^6.1.8",
+    "@angular/cli": "^6.2.3",
+    "@angular/common": "^6.1.8",
+    "@angular/compiler": "^6.1.8",
+    "@angular/compiler-cli": "^6.1.8",
+    "@angular/core": "^6.1.8",
+    "@angular/forms": "^6.1.8",
+    "@angular/http": "^6.1.8",
+    "@angular/platform-browser": "^6.1.8",
+    "@angular/platform-browser-dynamic": "^6.1.7",
+    "@ionic-native/camera": "^4.14.0",
+    "@ionic-native/core": "^4.14.0",
+    "@ionic-native/geolocation": "^4.14.0",
+    "@ionic-native/native-geocoder": "^4.14.0",
+    "@ionic-native/network": "^4.14.0",
     "@ionic-native/splash-screen": "~4.11.0",
     "@ionic-native/status-bar": "~4.11.0",
     "@ionic/storage": "2.1.3",
+    "angular": "^1.7.4",
+    "angularfire2": "^5.0.1",
     "cordova-android": "^7.1.1",
+    "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-ionic": "^5.0.5",
+    "cordova-plugin-geolocation": "^4.0.1",
+    "cordova-plugin-ionic": "^5.2.4",
     "cordova-plugin-ionic-keyboard": "^2.1.2",
-    "cordova-plugin-ionic-webview": "^2.0.2",
+    "cordova-plugin-ionic-webview": "^2.1.4",
+    "cordova-plugin-nativegeocoder": "^3.1.2",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-whitelist": "^1.3.3",
-    "ionic": "^4.1.1",
+    "fire": "^0.55.1",
+    "firebase": "^5.5.0",
+    "geolocation": "^0.2.0",
+    "ionic": "^4.1.2",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "leaflet": "^1.1.0",
     "native": "^0.3.3",
-    "rxjs": "5.5.11",
+    "node-sass": "^4.9.3",
+    "promise-polyfill": "^8.1.0",
+    "rxjs": "^6.3.2",
+    "rxjs-compat": "^6.3.2",
     "sw-toolbox": "3.6.0",
+    "tslib": "^1.9.3",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.1.11",
+    "@ionic/app-scripts": "^3.2.0",
     "@ionic/lab": "1.0.8",
-    "typescript": "~2.6.2"
+    "typescript": "~2.9.2"
   },
   "description": "An Ionic project",
   "cordova": {
@@ -51,7 +69,12 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-camera": {},
+      "cordova-plugin-geolocation": {
+        "GEOLOCATION_USAGE_DESCRIPTION": "To locate you"
+      },
+      "cordova-plugin-nativegeocoder": {}
     },
     "platforms": [
       "android"
